<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jbt.iebdappbykoby.addManual">

    <EditText
        android:id="@+id/subjectET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/moviename"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bodyET"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/manualCancelBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/manualCancelBtn"
        android:layout_below="@+id/subjectET"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/urlET"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyET"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/urlImage"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/showImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/showimage" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/savemanual" />

    <Button
        android:id="@+id/manualCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancelmanual" />

    <ImageView
        android:id="@+id/myImageIV"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_below="@+id/urlET"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
