<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jbt.iebdappbykoby.addFromInternet">

    <EditText
        android:id="@+id/searchMovieET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/searchBtn"
        android:layout_toStartOf="@+id/searchBtn"
        android:ems="10"
        android:hint="@string/searchintET"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/searchint" />

    <Button
        android:id="@+id/internetCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cancelint" />

    <ListView
        android:id="@+id/internetLV"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/searchBtn"
        android:layout_centerHorizontal="true" >

    </ListView>

</RelativeLayout>
